style.css
* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  text-align: center;
}

/*
███████ ████████ ██    ██ ██      ███████
██         ██     ██  ██  ██      ██
███████    ██      ████   ██      █████
     ██    ██       ██    ██      ██
███████    ██       ██    ███████ ███████
*/
:root {
  --blue: rgb(47, 52, 80);
}

body {
  background-color: rgb(233, 150, 122);
  color: var(--blue);
}

header,
footer {
  background-color: var(--blue);
}

.random,
.ver {
  color: rgb(58, 242, 35);
}

.color,
.ona {
  color: whitesmoke;
}

.generator,
.hub {
  color: rgb(255, 0, 0);
}

h1 {
  font-size: 2rem;
  font-weight: 300;
  text-transform: uppercase;
}

h2 {
  font-size: 2rem;
}

.main-content {
  background-color: #FFEFCA;
  border: 4px double var(--blue);
  border-radius: 16px;
}

input,
input:focus {
  background-color: #FFEFCA !important;
  color: var(--blue);
  font-size: 1.6rem;
}

input {
  border-style: dashed;
  border-color: var(--blue);
  cursor: crosshair;
  margin: 0 auto;
  padding: 5px;
  text-align: center;
  /* width: max-content; */
}

input:focus {
  outline: none;
}

.hex_value {
  text-transform: uppercase;
}


p {
  font-size: 1.6rem;
}

.btn {
  background-color: var(--blue);
  border: none;
  border-radius: 4px;
  color: whitesmoke;
  cursor: pointer;
  font-size: 1.1rem;
  padding: 15px 30px;
}

/*
███    ███  █████  ██ ███    ██
████  ████ ██   ██ ██ ████   ██
██ ████ ██ ███████ ██ ██ ██  ██
██  ██  ██ ██   ██ ██ ██  ██ ██
██      ██ ██   ██ ██ ██   ████
*/
nav {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-decoration: none;
}

nav .icon-wrapper {
  padding: 10px;
}

nav img {
  height: 60px;
  margin: 5px 5px 0 10px;
}

main {
  height: 100%;
}

.main-content {
  display: flex;
  flex-direction: column;
  height: 400px;
  justify-content: space-evenly;
  margin: 0 auto;
  position: relative;
  top: 20vh;
  width: 550px;
}

main p {
  margin: 0 auto;
  width: max-content;
}

.btn:hover:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

/*
███████  ██████   ██████  ████████ ███████ ██████
██      ██    ██ ██    ██    ██    ██      ██   ██
█████   ██    ██ ██    ██    ██    █████   ██████
██      ██    ██ ██    ██    ██    ██      ██   ██
██       ██████   ██████     ██    ███████ ██   ██
*/
footer {
  bottom: 0;
  position: absolute;
  width: 100%;
}

footer a {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  padding: 10px;
  text-decoration: none;
}

.footer-wrapper img {
  width: 60px;
}

.footer-text-wrapper p {
  display: flex;
  margin-left: 5px;
}

/*
███    ███ ███████ ██████  ██  █████
████  ████ ██      ██   ██ ██ ██   ██
██ ████ ██ █████   ██   ██ ██ ███████
██  ██  ██ ██      ██   ██ ██ ██   ██
██      ██ ███████ ██████  ██ ██   ██
*/
@media screen and (min-width: 1301px) {
  .btn-wrapper:hover .btn {
    background-color: rgba(55, 62, 107, 0.9);
  }
}

/*
 ██     ██████       ██████       ██████      ██████  ██   ██
███          ██     ██  ████     ██  ████     ██   ██  ██ ██
 ██      █████      ██ ██ ██     ██ ██ ██     ██████    ███
 ██          ██     ████  ██     ████  ██     ██       ██ ██
 ██     ██████       ██████       ██████      ██      ██   ██
*/
@media screen and (max-width: 1300px) {
  .main-content {
    border: 5px double var(--blue);
  }
}

@media screen and (max-width: 1300px) and (orientation: portrait) {
  h1 {
    font-size: 1.6rem;
  }

  p {
    font-size: 1.6rem;
  }
}

@media screen and (max-width: 1300px) and (orientation: landscape) {}

/*
 ██      ██████       ██████       ██████      ██████  ██   ██
███     ██  ████     ██  ████     ██  ████     ██   ██  ██ ██
 ██     ██ ██ ██     ██ ██ ██     ██ ██ ██     ██████    ███
 ██     ████  ██     ████  ██     ████  ██     ██       ██ ██
 ██      ██████       ██████       ██████      ██      ██   ██
*/
@media screen and (max-width: 1100px) and (orientation: lanscape) {
  footer {
    position: relative;
  }
}

@media screen and (max-width: 1001px) {}

@media screen and (max-width: 1001px) and (orientation: portrait) {
  .main-content {
    top: 15vh;
  }
}

@media screen and (max-width: 1001px) and (orientation: landscape) {}

@media screen and (max-height: 700px) and (max-width: 1000px) and (orientation: landscape) {}
  
  
  @media screen and (max-width: 700px) and (orientation: landscape) {
    .btn {
      font-size: 1rem;
      padding: 10px 40px;
    }
  }

/*
 ██████  ██   ██  ██████      ██████  ██   ██
██       ██   ██ ██  ████     ██   ██  ██ ██
███████  ███████ ██ ██ ██     ██████    ███
██    ██      ██ ████  ██     ██       ██ ██
 ██████       ██  ██████      ██      ██   ██
*/
@media screen and (max-width: 640px) {
  input,
  input:focus {
    font-size: 1.2rem;
  }
}

@media screen and (max-width: 640px) and (orientation: portrait) {
  .footer-wrapper img {
    height: 60px;
  }
}


/*
██   ██      █████       ██████      ██████  ██   ██
██   ██     ██   ██     ██  ████     ██   ██  ██ ██
███████      █████      ██ ██ ██     ██████    ███
     ██     ██   ██     ████  ██     ██       ██ ██
     ██      █████       ██████      ██      ██   ██
*/
@media screen and (max-width: 480px) {
  h1 {
    font-size: 1rem;
  }

  nav img {
    height: 40px;
    margin: 0;
  }

  .main-content {
    border: 3px solid var(--blue);
    width: 250px;
  }

  .btn {
    font-size: 1rem;
  }

  h2 {
    font-size: 1.3rem;
  }

  p {
    font-size: 1.2rem;
  }
}

/*
██████      ███████      ██████      ██████  ██   ██
     ██          ██     ██  ████     ██   ██  ██ ██
 █████          ██      ██ ██ ██     ██████    ███
     ██        ██       ████  ██     ██       ██ ██
██████         ██        ██████      ██      ██   ██
*/
@media screen and (max-width: 370px) {
  .btn {
    padding: 15px 40px;
  }

  footer p {
    padding: 10px 0 0;
  }
}

